--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,7 @@
         "es2015",
         "react"
     ],
-    "plugins": ["transform-react-remove-prop-types"]
+    "plugins": [
+        "transform-react-remove-prop-types"
+    ]
 }
