--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ezplatform-admin-ui-modules",
+  "license": "MIT",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -22,10 +23,10 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
+    "eslint-plugin-react": "^7.3.0",
+    "prop-types": "^15.5.10",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.5.5",
-    "eslint-plugin-react": "^7.3.0",
-    "prop-types": "^15.5.10"
+    "webpack": "^3.5.5"
   }
 }
