--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     "psr-4": {
       "EzSystems\\EzPlatformAdminUiModulesBundle\\": "/"
     }
+  },
+  "extra": {
+      "branch-alias": {
+          "dev-master": "2.0.x-dev"
+      }
   }
 }
