[composer] Set new version requirement for symfony/symfony package

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "symfony/symfony": "^3.3"
+    "symfony/symfony": "^3.4@beta"
   },
   "autoload": {
     "psr-4": {
