--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "symfony/symfony": "^3.4@beta"
+    "symfony/symfony": "^3.4"
   },
   "autoload": {
     "psr-4": {
