--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
         "react": "^15.6.1",
         "react-dom": "^15.6.1"
     },
-    "scripts": {},
+    "scripts": {
+        "build": "webpack",
+        "watch": "webpack --watch"
+    },
     "devDependencies": {
         "babel": "^6.23.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
         "babel-preset-env": "^1.6.0",
         "babel-preset-es2015": "^6.24.1",
