--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,23 @@
 {
     "presets": [
-        "react",
+        ["react"],
         [
             "env",
             {
                 "targets": {
-                    "browsers": ["last 1 version"]
+                    "browsers": [
+                        "last 1 Chrome version",
+                        "last 1 Firefox version",
+                        "last 1 Safari version",
+                        "last 1 Opera version",
+                        "last 1 Edge version"
+                    ]
                 }
             }
         ]
     ],
-    "plugins": ["transform-react-remove-prop-types", "transform-object-rest-spread"]
+    "plugins": [
+        "transform-react-remove-prop-types",
+        "transform-object-rest-spread"
+    ]
 }
