--- a/package.json
+++ b/package.json
@@ -2,29 +2,32 @@
     "name": "ezplatform-admin-ui-modules",
     "license": "MIT",
     "dependencies": {
-        "react": "^15.6.1",
-        "react-dom": "^15.6.1"
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     },
     "scripts": {
         "build": "webpack",
         "watch": "webpack --watch"
     },
     "devDependencies": {
-        "babel": "^6.23.0",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
+        "babel-core": "^6.26.3",
+        "babel-eslint": "^8.2.1",
+        "babel-loader": "^7.1.4",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
-        "babel-preset-env": "^1.6.0",
-        "babel-preset-es2015": "^6.24.1",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
-        "clean-webpack-plugin": "^0.1.16",
-        "css-loader": "^0.28.5",
+        "clean-webpack-plugin": "^0.1.17",
+        "css-loader": "^0.28.11",
+        "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
-        "eslint-plugin-react": "^7.3.0",
-        "prop-types": "^15.5.10",
-        "style-loader": "^0.18.2",
-        "uglifyjs-webpack-plugin": "^0.4.6",
-        "webpack": "^3.5.5"
+        "eslint-plugin-react": "^7.7.0",
+        "html-to-react": "^1.3.2",
+        "npm-watch": "^0.3.0",
+        "prettier": "^1.12.1",
+        "prop-types": "^15.6.1",
+        "style-loader": "^0.21.0",
+        "uglifyjs-webpack-plugin": "^1.1.6",
+        "webpack": "3.10.0"
     }
 }
