--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babel-preset-react": "^6.24.1",
         "clean-webpack-plugin": "^0.1.17",
         "css-loader": "^0.28.11",
+        "eslint": "^5.0.1",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
         "eslint-plugin-react": "^7.7.0",
