--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,9 @@
         "es6": true,
         "node": true
     },
+    "globals": {
+        "Translator": true
+    },
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
