--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
     }
   },
   "extra": {
+    "_ezplatform_branch_for_behat_tests": "2.2",
     "branch-alias": {
-      "dev-master": "1.2.x-dev"
+      "dev-master": "1.2.x-dev",
+      "dev-tmp_ci_branch": "1.2.x-dev"
     }
   }
 }
