--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "node": true
     },
     "globals": {
-        "Translator": true
+        "Translator": true,
+        "eZ": true
     },
     "parser": "babel-eslint",
     "parserOptions": {
