--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "ezplatform-admin-ui-modules",
     "license": "MIT",
     "dependencies": {
+        "classnames": "^2.2.6",
         "react": "^16.2.0",
         "react-dom": "^16.2.0"
     },
