--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
     "name": "ezplatform-admin-ui-modules",
     "license": "MIT",
-    "dependencies": {
-        "classnames": "^2.2.6",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
-    },
     "scripts": {
         "build": "webpack --config webpack.prod.js",
         "builddev": "webpack --config webpack.dev.js",
         "watch": "webpack --watch --config webpack.dev.js",
         "watchprod": "webpack --watch --config webpack.prod.js",
-        "fix-cs": "eslint --fix src/ && prettier --write src/**/*.js"
+        "fix-cs": "eslint --fix src/ && prettier --write src/**/*.js",
+        "test": "jest --config ./jest.config.js"
+    },
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^8.2.1",
-        "babel-loader": "^7.1.4",
+        "@babel/core": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
+        "@babel/preset-react": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.5",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
         "clean-webpack-plugin": "^0.1.17",
         "css-loader": "^0.28.11",
         "eslint": "^5.0.1",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
         "eslint-plugin-react": "^7.7.0",
+        "jest": "^24.7.1",
+        "jest-dom": "^3.1.3",
+        "jest-fetch-mock": "^2.1.2",
+        "jquery": "^3.4.0",
         "prettier": "^1.12.1",
         "prop-types": "^15.6.1",
+        "react-testing-library": "^6.1.2",
         "style-loader": "^0.21.0",
         "uglifyjs-webpack-plugin": "^1.1.6",
         "webpack": "3.10.0",
