[Composer] Set branch alias for new major version. Use master for tests

--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     }
   },
   "extra": {
-    "_ezplatform_branch_for_behat_tests": "2.5",
+    "_ezplatform_branch_for_behat_tests": "master",
     "branch-alias": {
-      "dev-master": "1.5.x-dev",
-      "dev-tmp_ci_branch": "1.5.x-dev"
+      "dev-master": "2.0.x-dev",
+      "dev-tmp_ci_branch": "2.0.x-dev"
     }
   }
 }
