--- a/.babelrc
+++ b/.babelrc
@@ -16,5 +16,5 @@
             }
         ]
     ],
-    "plugins": ["transform-object-rest-spread"]
+    "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
