--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "plugins": ["react", "prettier"],
+    "plugins": ["react", "prettier", "react-hooks"],
     "extends": ["prettier", "prettier/react", "eslint:recommended", "plugin:react/recommended"],
     "env": {
         "browser": true,
@@ -34,6 +34,8 @@
         "no-extra-boolean-cast": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "jsx-quotes": ["error", "prefer-double"]
+        "jsx-quotes": ["error", "prefer-double"],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
