--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
         "eslint-plugin-react": "^7.7.0",
+        "eslint-plugin-react-hooks": "^1.6.0",
         "jest": "^24.7.1",
         "jest-dom": "^3.1.3",
         "jest-fetch-mock": "^2.1.2",
