--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
-    "plugins": ["react", "prettier"],
+    "plugins": ["react", "prettier", "react-hooks"],
     "extends": ["prettier", "prettier/react", "eslint:recommended", "plugin:react/recommended"],
     "env": {
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "globals": {
         "Translator": true,
@@ -33,6 +34,9 @@
         "no-extra-boolean-cast": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "jsx-quotes": ["error", "prefer-double"]
+        "jsx-quotes": ["error", "prefer-double"],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "react/no-unused-prop-types": "warn"
     }
 }
