Added PHP dependency to composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     }
   ],
   "require": {
+    "php": "^7.3",
     "symfony/http-kernel": "^4.3",
     "symfony/config": "^4.3",
     "symfony/dependency-injection": "^4.3",
