--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
     }
   ],
   "require": {
-    "symfony/symfony": "^3.4"
+    "php": "^7.3",
+    "symfony/http-kernel": "^4.3",
+    "symfony/config": "^4.3",
+    "symfony/dependency-injection": "^4.3",
+    "symfony/yaml": "^4.3"
   },
   "autoload": {
     "psr-4": {
