Revert new UDW changes (#193)
* Revert "EZP-30525: Convert Browse Tab as a standalone ReactJS module (#187)"

This reverts commit c1ebd4234f233559e30da9dc501b62b711752959.

* Revert "EZP-30530: Create a base for the new UDW (#186)"

This reverts commit 2baf3d02d27d8f093daf849d7da8519fcf68769f.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,11 @@
 {
-    "plugins": ["react", "prettier", "react-hooks"],
+    "plugins": ["react", "prettier"],
     "extends": ["prettier", "prettier/react", "eslint:recommended", "plugin:react/recommended"],
     "env": {
         "browser": true,
         "commonjs": true,
         "es6": true,
-        "node": true,
-        "jest": true
+        "node": true
     },
     "globals": {
         "Translator": true,
@@ -34,10 +33,6 @@
         "no-extra-boolean-cast": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "react/require-default-props": "warn",
-        "jsx-quotes": ["error", "prefer-double"],
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "react/no-unused-prop-types": "warn"
+        "jsx-quotes": ["error", "prefer-double"]
     }
 }
