Use SF4 APP_ENV and APP_DEBUG

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
     - EZPLATFORM_REPO="https://github.com/ezsystems/ezplatform.git"
     - COMPOSE_FILE="doc/docker/base-dev.yml:doc/docker/selenium.yml"
     - BEHAT_OPTS="--mode=behat --profile=adminui --suite=adminuimodules"
-    - SYMFONY_ENV=behat
-    - SYMFONY_DEBUG=1
+    - APP_ENV=behat
+    - APP_DEBUG=1
 
 cache:
   directories:
