--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "eslint": "^5.0.1",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.6.0",
-        "eslint-plugin-react": "^7.7.0",
+        "eslint-plugin-react": "^7.14.2",
+        "eslint-plugin-react-hooks": "^1.6.1",
         "prettier": "^1.12.1",
         "prop-types": "^15.6.1",
         "style-loader": "^0.21.0",
