--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "_ezplatform_branch_for_behat_tests": "2.5",
     "branch-alias": {
       "dev-master": "1.5.x-dev",
-      "dev-tmp_ci_branch": "1.5.x-dev"
+      "dev-tmp_ci_branch": "1.5"
     }
   }
 }
